<resources>
    <string name="app_name">Izanami</string>
    <string name="app_name_complement">OS</string>
    <string name="application_icon_description">Application icon</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in_message">Welcome to Izanami. If you don\'t have an account yet, then sign up or start by logging in.</string>
    <string name="sign_up_message">Welcome to Izanami. Create your account here if you don\'t already have one.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Your name</string>
    <string name="last_name">Last name</string>
    <string name="already_have_account">Already have account?</string>
    <string name="sign_in">Sign in</string>
    <string name="remember_me">Remember me</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="not_binary">Not binary</string>
    <string name="ending">Ending</string>
    <string name="complete_sign_up_message">Now let\'s create a new profile for you</string>
    <string name="nickname">Nickname</string>
    <string name="profile_status">Profile status</string>
    <string name="born_year">Born what year</string>
    <string name="continue_s">Continue</string>
    <string name="profile_image_description">Profile image</string>
    <string name="other">Other</string>
</resources>