<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SignUpActivity">

    <ImageView
        android:id="@+id/image_app_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/application_icon_description"
        android:src="@drawable/ic_log_i"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/app_name"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_app_icon"
        app:layout_constraintStart_toEndOf="@+id/image_app_icon"
        app:layout_constraintTop_toTopOf="@+id/image_app_icon"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/app_name_complement"
        android:textColor="@color/red"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_app_name"
        app:layout_constraintStart_toEndOf="@+id/text_app_name"
        app:layout_constraintTop_toTopOf="@+id/text_app_name" />

    <View
        android:id="@+id/view_sign_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/view_custom_sign"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_app_name" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@id/view_sign_in"
        app:layout_constraintEnd_toEndOf="@+id/view_sign_in"
        app:layout_constraintStart_toStartOf="@+id/view_sign_in"
        app:layout_constraintTop_toTopOf="@+id/view_sign_in">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:theme="@style/Sign_Container">

            <androidx.cardview.widget.CardView
                android:id="@+id/image_profile_card"
                android:layout_width="100dp"
                android:layout_marginTop="28dp"
                android:layout_height="100dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">


                <ImageView
                    android:id="@+id/image_profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/f2"
                    android:contentDescription="@string/profile_image_description"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_profile_placeholder" />
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/edit_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:autofillHints="username"
                android:background="@drawable/input_sign_custom"
                android:drawableEnd="@drawable/ic_outline_person_pin_24"
                android:drawableTint="@color/text_blue_dark"
                android:hint="@string/nickname"
                android:imeOptions="actionGo"
                android:inputType="textImeMultiLine|textPersonName"
                android:maxLines="1"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:textColor="@color/text_blue_dark"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_profile_card" />

            <EditText
                android:id="@+id/edit_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/input_sign_custom"
                android:drawableEnd="@drawable/ic_outline_edit_24"
                android:drawableTint="@color/text_blue_dark"
                android:hint="@string/profile_status"
                android:imeOptions="actionGo"
                android:inputType="textImeMultiLine|textCapWords|text"
                android:maxLines="1"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:textColor="@color/text_blue_dark"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_nickname" />

            <EditText
                android:id="@+id/edit_born"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:autofillHints=""
                android:background="@drawable/input_sign_custom"
                android:drawableEnd="@drawable/ic_outline_calendar_month_24"
                android:drawableTint="@color/text_blue_dark"
                android:hint="@string/born_year"
                android:imeOptions="actionGo"
                android:inputType="textImeMultiLine|number"
                android:maxLength="4"
                android:maxLines="1"
                android:paddingHorizontal="20dp"
                android:paddingVertical="12dp"
                android:textColor="@color/text_blue_dark"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_status" />

            <TextView
                android:id="@+id/text_male_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/ubuntu"
                android:padding="8dp"
                android:tag="false"
                android:text="@string/male"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_born" />

            <TextView
                android:id="@+id/text_female_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/ubuntu_bold"
                android:padding="8dp"
                android:tag="true"
                android:text="@string/female"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/edit_born" />

            <TextView
                android:id="@+id/text_other_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/ubuntu"
                android:padding="8dp"
                android:tag="false"
                android:text="@string/other"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_born" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="108dp"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/red"
                android:paddingVertical="12dp"
                android:text="@string/continue_s"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_born" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>