<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.MainActivity">

    <ImageView
        app:layout_constraintVertical_bias="0.45"
        android:id="@+id/image_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_log_i"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/application_icon_description" />

    <TextView
        android:id="@+id/text_app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="32dp"
        android:text="@string/app_name"
        android:textSize="16sp"
        android:fontFamily="@font/ubuntu"
        android:textAlignment="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_app_name_complement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/app_name_complement"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/text_app_name"
        app:layout_constraintTop_toTopOf="@+id/text_app_name" />

</androidx.constraintlayout.widget.ConstraintLayout>